--- a/LeGO-LOAM/CMakeLists.txt
+++ b/LeGO-LOAM/CMakeLists.txt
@@ -58,3 +58,7 @@ target_link_libraries(mapOptmization ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${Open
 
 add_executable(transformFusion src/transformFusion.cpp)
 target_link_libraries(transformFusion ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBRARIES})
+
+# tool
+add_executable(pose_recorder tool/pose_recorder.cpp)
+target_link_libraries(pose_recorder ${catkin_LIBRARIES})
